syntax="proto3";

package com.distkv.drpc.codec;

import "google/protobuf/any.proto";

option java_package = "com.distkv.drpc.codec.generated";
option java_outer_classname="DrpcProtocol";

message Request {
    int64 requestId = 1;
    string interfaceName = 2;
    string methodName = 3;
    repeated google.protobuf.Any args = 4;
};

message Response {
    int64 requestId = 1;
    DrpcStatus status = 2;
    oneof returnValue {
        google.protobuf.Any result = 3;
        string errorMessage = 4;
    };
};

enum DrpcStatus {
    OK = 0; // OK;
    OUTER_ERROR = 1; // Outer error;
    INNER_ERROR = 2; // Inner error;
};
